--- a/ads/templates/score_lightgbm.jinja2
+++ b/ads/templates/score_lightgbm.jinja2
@@ -8,6 +8,7 @@ import pandas as pd
 import numpy as np
 from io import BytesIO
 import base64
+import logging
 
 
 model_name = '{{model_file_name}}'
@@ -83,6 +84,12 @@ def deserialize(data, input_schema_path):
     data: deserialized input data.
 
     """
+    if isinstance(data, bytes):
+        logging.warning(
+            "bytes are passed directly to the model. If the model expects a specific data format, you need to write the conversion logic in `deserialize()` yourself."
+        )
+        return data
+
     data_type = data.get('data_type', '') if isinstance(data, dict) else ''
     json_data = data.get('data', data) if isinstance(data, dict) else data
 
