--- a/ads/templates/score_pytorch.jinja2
+++ b/ads/templates/score_pytorch.jinja2
@@ -8,6 +8,7 @@ import numpy as np
 import pandas as pd
 from io import BytesIO
 import base64
+import logging
 
 model_name = '{{model_file_name}}'
 
@@ -92,6 +93,12 @@ predict.
     data: deserialized input data.
 
     """
+    if isinstance(data, bytes):
+        logging.warning(
+            "bytes are passed directly to the model. If the model expects a specific data format, you need to write the conversion logic in `deserialize()` yourself."
+        )
+        return data
+
     data_type = data.get('data_type', '') if isinstance(data, dict) else ''
     json_data = data.get('data', data) if isinstance(data, dict) else data
 
