--- a/ads/templates/score_pyspark.jinja2
+++ b/ads/templates/score_pyspark.jinja2
@@ -32,17 +32,28 @@ def load_model(model_file_name=model_name):
     -------
     model:  a model instance on which predict API can be invoked
     """
-    model_dir = os.environ.get("OCI_DEPLOYMENT_PATH", os.path.dirname(os.path.realpath(__file__)))
-    if model_dir not in sys.path:
-        sys.path.insert(0, model_dir)
+    exc_msg = ""
     try:
-        print(f'Start loading {model_file_name} from model directory {model_dir} ...')
+        model_dir = os.path.dirname(os.path.realpath(__file__))
+        sys.path.insert(0, model_dir)
         loaded_model = PipelineModel.load(os.path.join(model_dir, model_file_name))
+        print(f"Model is successfully loaded from {model_dir}.")
+        return loaded_model
+    except Exception as e:
+        exc_msg = f"Failed to load the model from {model_dir} and gave the exception: \n{e}."
+
+    {% if artifact_dir.startswith("oci://") %}
+    # model need to be loaded from {{artifact_dir}} in Data Flow.
+    try:
+        loaded_model = PipelineModel.load(os.path.join(artifact_dir, model_file_name))
         print("Model is successfully loaded.")
         return loaded_model
     except Exception as e:
-        error_msg = f"Failed to load the model and gave the exception: {e}."
-        raise Exception(error_msg)
+        exc_msg += "\n" + f"Failed to load the model from {artifact_dir} and gave the exception: \n{e}."
+    {% endif %}
+
+    if exc_msg:
+        raise Exception(exc_msg)
 
 @lru_cache(maxsize=1)
 def fetch_data_type_from_schema(input_schema_path=os.path.join(os.path.dirname(os.path.realpath(__file__)), "input_schema.json")):
