Added support to deploy llmchain and refractor code.

--- a/ads/llm/templates/score_chain.jinja2
+++ b/ads/llm/templates/score_chain.jinja2
@@ -3,7 +3,8 @@ import os
 import sys
 import json
 from functools import lru_cache
-from ads.llm.chain import GuardrailSequence
+from langchain.chains import LLMChain
+from ads.llm.chain import ADSChain
 
 
 """
@@ -20,8 +21,11 @@ def load_model():
     -------
     model:  a model instance on which predict API can be invoked
     """
-    chain = GuardrailSequence.from_yaml("""{{guardrail_sequence_yaml}}""")
-    return chain
+    chain_yaml_path = os.path.join(
+        os.path.dirname(os.path.abspath(__file__)),
+        "chain.yaml"
+    )
+    return ADSChain.load_chain(chain_yaml_path)
 
 @lru_cache(maxsize=1)
 def fetch_data_type_from_schema(input_schema_path=os.path.join(os.path.dirname(os.path.realpath(__file__)), "input_schema.json")):
@@ -153,6 +157,7 @@ def predict(data, model=load_model(), input_schema_path=os.path.join(os.path.dir
     """
     features = pre_inference(data, input_schema_path)
     yhat = post_inference(
-        model.run(features).data                 
+        model.run(features) if isinstance(model, LLMChain)
+        else model.run(features).data 
     )
     return {'prediction': yhat}
