--- a/ads/llm/templates/score_chain.jinja2
+++ b/ads/llm/templates/score_chain.jinja2
@@ -4,7 +4,7 @@ import sys
 import json
 from functools import lru_cache
 from langchain.chains import LLMChain
-from ads.llm.chain import ChainDeployment
+from ads.llm.deploy import ChainDeployment
 
 
 """
